--- a/ts/index.html
+++ b/ts/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" name="" value="prasad" id="inp">
     <script src="./js/script.js"></script>
 </body>
 </html>
